tests/js/invalid/record/add-new-field.buri
-- You cannot add new fields to a record via record RecordAssignment

alice = { name: "Alice" }
withAge = { alice | age: 42 }